// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders Icons of custom classname 1`] = `
Array [
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon custom-arrow-down"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons of different size correctly 1`] = `
Array [
  <i
    class="za-icon za-icon--lg"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon za-icon--sm"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons of different theme correctly 1`] = `
Array [
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon za-icon--primary"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon za-icon--success"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon za-icon--warning"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon za-icon--danger"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons using iconfont 1`] = `
Array [
  <i
    class="za-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <use
        href="#home"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <use
        href="#user"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons using svg component 1`] = `
<i
  class="za-icon za-icon--primary za-icon--lg"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    viewBox="0 0 1000 1000"
    width="1em"
  >
    <path
      d="M1 12.376l8.8 9.114L30.431 1.568"
      fill="none"
      stroke="currentColor"
      stroke-width="2.6"
    />
  </svg>
</i>
`;

exports[`Icon renders all Icons 1`] = `
Array [
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M494.094 733.426a41.472 41.472 0 01-20.023-11.126L140.16 388.388c-16.272-16.271-16.272-42.653 0-58.925 16.271-16.272 42.653-16.272 58.925 0L503.66 634.037 808.186 329.51c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L533.2 722.347c-10.607 10.607-25.508 14.3-39.106 11.08z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M296.114 508.035c-3.22-13.597.473-28.499 11.079-39.105l333.912-333.912c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L395.504 498.47l304.574 304.574c16.272 16.272 16.272 42.654 0 58.926s-42.654 16.272-58.926 0L307.241 528.058a41.472 41.472 0 01-11.127-20.023z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M711.156 508.035a41.472 41.472 0 01-11.126 20.023L366.12 861.97c-16.272 16.272-42.654 16.272-58.926 0s-16.272-42.654 0-58.926L611.767 498.47 307.241 193.944c-16.272-16.272-16.272-42.654 0-58.926 16.271-16.272 42.653-16.272 58.925 0L700.078 468.93c10.606 10.606 14.299 25.508 11.078 39.105z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M513.176 285.05a41.472 41.472 0 0120.024 11.127L867.11 630.089c16.272 16.271 16.272 42.653 0 58.925s-42.654 16.272-58.925 0L503.612 384.44 199.085 688.967c-16.272 16.271-42.654 16.271-58.925 0-16.272-16.272-16.272-42.654 0-58.926L474.07 296.129c10.606-10.606 25.508-14.299 39.105-11.078z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M500 0C224.32 0 0 224.286 0 500s224.286 500 500 500c275.68 0 500-224.286 500-500S775.714 0 500 0zm203.965 654c13.928 14 13.892 36.572-.072 50.5a35.644 35.644 0 01-25.213 10.429c-9.179 0-18.321-3.5-25.287-10.5L499.821 550.393l-154.07 152.43c-6.964 6.857-16.037 10.32-25.109 10.32-9.213 0-18.392-3.536-25.392-10.607-13.857-14.036-13.75-36.608.286-50.5L449.43 499.821 296.107 346c-13.93-13.965-13.893-36.572.07-50.5 13.966-13.965 36.536-13.892 50.5.07l153.536 154 154.071-152.427c14-13.892 36.643-13.75 50.5.286 13.892 14.036 13.75 36.643-.286 50.5l-153.89 152.213L703.965 654z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <g
        fill-rule="evenodd"
      >
        <g>
          <path
            d="M500 460.716l137.493-137.493c10.848-10.848 28.436-10.848 39.284 0l.101.102c10.735 10.848 10.645 28.344-.203 39.08l-138.207 136.78 138.309 138.308c10.848 10.848 10.848 28.436 0 39.284-10.848 10.848-28.436 10.848-39.284 0L498.98 538.264 359.85 675.956c-10.41 10.303-27.188 10.26-37.545-.097-10.34-10.341-10.34-27.107 0-37.448L460.716 500 323.223 362.507c-10.848-10.848-10.848-28.436 0-39.284 10.848-10.848 28.436-10.848 39.284 0L500 460.716z"
          />
          <path
            d="M190.64 809.36c170.855 170.854 447.865 170.854 618.72 0 170.854-170.855 170.854-447.865 0-618.72-170.855-170.854-447.865-170.854-618.72 0-170.854 170.855-170.854 447.865 0 618.72zm-44.193 44.193C79.79 786.896 35.887 706.101 14.74 620.821c-35.264-142.21-7.253-296.892 84.033-419.288a504.148 504.148 0 0147.674-55.086c195.262-195.263 511.844-195.263 707.106 0 195.263 195.262 195.263 511.844 0 707.106-195.262 195.263-511.844 195.263-707.106 0z"
            fill-rule="nonzero"
          />
        </g>
      </g>
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M560.149 501.223l255.344 255.344c16.272 16.272 16.272 42.654 0 58.926s-42.654 16.272-58.926 0L501.223 560.149 245.88 815.493c-16.272 16.272-42.654 16.272-58.925 0-16.272-16.272-16.272-42.654 0-58.926l255.344-255.344L186.954 245.88c-16.272-16.272-16.272-42.654 0-58.925 16.271-16.272 42.653-16.272 58.925 0l255.344 255.344 255.344-255.344c16.272-16.272 42.654-16.272 58.926 0 16.272 16.271 16.272 42.653 0 58.925L560.149 501.223z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M606.557 535.541l129.246 129.246 35.956-35.956-129.246-129.246L771.76 370.34l-35.956-35.956-129.246 129.246-129.246-129.246-35.956 35.956L570.6 499.585 441.355 628.831l35.956 35.956 129.246-129.246zm217.006-341.967c61.114 0 110.863 49.027 110.863 109.29v393.443c0 60.262-49.727 109.29-110.863 109.29H409.836a112.175 112.175 0 01-79.979-33.618L72.852 515.673l-.416-.438-.415-.415a21.094 21.094 0 01-6.426-15.257c0-4.044 1.115-9.989 6.426-15.257l.415-.415.416-.437L329.857 227.17a112.131 112.131 0 0179.979-33.64h413.727v.044zm0-65.574H427.519a177.18 177.18 0 00-126.973 53.465L25.857 437.77a86.842 86.842 0 000 123.65l274.689 256.306a177.18 177.18 0 00126.973 53.465h396.044c97.442 0 176.437-78.295 176.437-174.864V302.885C1000 206.295 921.005 128 823.563 128z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <text
        fill-rule="evenodd"
        font-family="PingFangSC-Regular, PingFang SC"
        font-size="300"
      >
        <tspan
          x="-4498"
          y="1111"
        >
          线框图标 - 有对应的实底图标
        </tspan>
      </text>
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M500 0c275.714 0 500 224.286 500 500s-224.32 500-500 500C224.286 1000 0 775.714 0 500S224.32 0 500 0zm22.616 365.598H477.03c-6.207 0-11.349 4.913-11.5 11.7l-5.905 265.674-3.298 148.37c-.144 6.463 4.445 11.701 11.18 11.701h64.633c6.318 0 11.331-4.912 11.18-11.7l-2.82-126.91-1.6-71.918-4.783-215.216c-.144-6.462-5.601-11.7-11.5-11.7zm-22.554-140.81c-24.16 0-43.744 19.585-43.744 43.744 0 24.16 19.585 43.745 43.744 43.745 24.16 0 43.745-19.585 43.745-43.745 0-24.159-19.585-43.744-43.745-43.744z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <g
        fill-rule="evenodd"
      >
        <path
          d="M499.938 937.383c241.594 0 437.445-195.851 437.445-437.445 0-241.595-195.851-437.446-437.445-437.446-241.595 0-437.446 195.851-437.446 437.446 0 241.594 195.851 437.445 437.446 437.445zm0 62.492C223.83 999.875 0 776.045 0 499.938 0 223.83 223.83 0 499.938 0c276.107 0 499.937 223.83 499.937 499.938 0 276.107-223.83 499.937-499.937 499.937z"
          fill-rule="nonzero"
        />
        <path
          d="M456.326 791.343c-.144 6.462 4.445 11.7 11.18 11.7h64.633c6.318 0 11.331-4.912 11.18-11.7l-9.203-414.044c-.144-6.462-5.601-11.7-11.5-11.7H477.03c-6.207 0-11.349 4.912-11.5 11.7l-9.203 414.044zm43.736-479.066c-24.16 0-43.744-19.585-43.744-43.745 0-24.159 19.585-43.744 43.744-43.744 24.16 0 43.745 19.585 43.745 43.744 0 24.16-19.585 43.745-43.745 43.745z"
        />
      </g>
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M444.455 818.474c-.183 8.206 5.676 14.86 14.278 14.86h82.534c8.069 0 14.47-6.24 14.278-14.86l-11.753-525.836c-.183-8.207-7.153-14.86-14.685-14.86h-58.214c-7.927 0-14.492 6.239-14.685 14.86l-11.753 525.836zM500 111.11c-30.682 0-55.556 24.873-55.556 55.556 0 30.682 24.874 55.555 55.556 55.555s55.556-24.873 55.556-55.555c0-30.683-24.874-55.556-55.556-55.556z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M0 138h1000v600.537H0V138zm61.538 61.594v477.35h876.924v-477.35H61.538zm92.308 76.991h76.923v76.992h-76.923v-76.992zm123.077 0h76.923v76.992h-76.923v-76.992zm123.077 0h76.923v76.992H400v-76.992zm123.077 0H600v76.992h-76.923v-76.992zm123.077 0h76.923v76.992h-76.923v-76.992zm123.077 0h76.923v76.992H769.23v-76.992zM215.385 399.772h76.923v76.992h-76.923v-76.992zm123.077 0h76.923v76.992h-76.923v-76.992zm123.076 0h76.924v76.992h-76.924v-76.992zm123.077 0h76.923v76.992h-76.923v-76.992zm123.077 0h76.923v76.992h-76.923v-76.992zM153.846 522.96h76.923v76.992h-76.923V522.96zm615.385 0h76.923v76.992H769.23V522.96zm-492.308 0h446.154v76.992H276.923V522.96zm138.462 246.374H600l-92.308 92.39-92.307-92.39z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M537.5 537.5h-400c-20.71 0-37.5-16.79-37.5-37.5s16.79-37.5 37.5-37.5h725c20.71 0 37.5 16.79 37.5 37.5s-16.79 37.5-37.5 37.5h-325z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <g
        fill-rule="evenodd"
      >
        <path
          d="M472.222 472.222V277.778C472.222 262.437 484.66 250 500 250h.143c15.262.08 27.57 12.516 27.49 27.777l-1.009 194.445h195.598C737.563 472.222 750 484.66 750 500s-12.437 27.778-27.778 27.778H526.336l-1.017 195.743C525.243 738.167 513.35 750 498.702 750c-14.624 0-26.48-11.855-26.48-26.48V527.778H277.778C262.437 527.778 250 515.34 250 500s12.437-27.778 27.778-27.778h194.444z"
        />
        <path
          d="M500 937.5c241.625 0 437.5-195.875 437.5-437.5S741.625 62.5 500 62.5 62.5 258.375 62.5 500 258.375 937.5 500 937.5zm0 62.5C223.858 1000 0 776.142 0 500S223.858 0 500 0s500 223.858 500 500-223.858 500-500 500z"
          fill-rule="nonzero"
        />
      </g>
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M537.5 537.5v325c0 20.71-16.79 37.5-37.5 37.5s-37.5-16.79-37.5-37.5v-325h-325c-20.71 0-37.5-16.79-37.5-37.5s16.79-37.5 37.5-37.5h325v-325c0-20.71 16.79-37.5 37.5-37.5s37.5 16.79 37.5 37.5v325h325c20.71 0 37.5 16.79 37.5 37.5s-16.79 37.5-37.5 37.5h-325z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.852 36.852 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M500.122 852.313L222.594 974.61c-15.569 6.86-33.752-.199-40.612-15.767a30.806 30.806 0 01-2.46-15.526l30.551-301.737L8.001 415.427C-3.335 402.74-2.24 383.266 10.447 371.93a30.806 30.806 0 0114.005-7.136l296.41-64.187L473.502 38.54c8.563-14.702 27.423-19.678 42.125-11.115a30.806 30.806 0 0111.115 11.115l152.64 262.067 296.41 64.187c16.628 3.6 27.188 20 23.588 36.627a30.806 30.806 0 01-7.137 14.006L790.171 641.58l30.55 301.737c1.714 16.927-10.618 32.038-27.545 33.752-5.3.537-10.65-.31-15.526-2.459L500.122 852.313z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M726.275 620.749L911 413.697l-270.963-58.765L500.5 115 360.963 354.932 90 413.697 274.725 620.75 246.797 897 500.5 785.032 754.203 897l-27.928-276.251zm-226.278 231.33L222.446 974.377c-15.57 6.86-33.754-.2-40.616-15.768a30.803 30.803 0 01-2.459-15.526l30.553-301.736L7.835 415.193c-11.337-12.686-10.242-32.16 2.446-43.497a30.809 30.809 0 0114.007-7.136l296.434-64.186L473.375 38.306c8.564-14.701 27.425-19.678 42.128-11.115a30.807 30.807 0 0111.116 11.115l152.653 262.068 296.434 64.186c16.63 3.6 27.19 20 23.59 36.628a30.805 30.805 0 01-7.137 14.005l-202.09 226.154 30.554 301.736c1.714 16.927-10.62 32.039-27.548 33.753a30.81 30.81 0 01-15.527-2.46L499.997 852.08z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <g
        fill-rule="nonzero"
      >
        <path
          d="M768.316 310.056l8.152 7.889c7.094 6.866 6.578 17.765-.859 24.962L420.41 686.668c-11.05 10.695-29.195 10.227-40.571-.782L225.005 536.038c-7.02-6.795-8.156-17.36-1.967-24.922l14.47-17.68c5.931-7.248 17.026-9.068 24.868-3.995l125.242 81.02c6.607 4.275 17.977 3.718 24.145-1.132l330.943-260.233c7.438-5.849 19.09-5.35 25.61.96z"
        />
        <path
          d="M500 937.5c241.625 0 437.5-195.875 437.5-437.5S741.625 62.5 500 62.5 62.5 258.375 62.5 500 258.375 937.5 500 937.5zm0 62.5C223.858 1000 0 776.142 0 500S223.858 0 500 0s500 223.858 500 500-223.858 500-500 500z"
        />
      </g>
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M810.15 874.348c-8.687 0-17.376-3.026-24.37-9.105a36.447 36.447 0 01-3.47-51.714c74.253-83.94 142.954-179.956 142.954-313.862 0-133.877-68.701-229.949-142.955-313.806a36.474 36.474 0 013.47-51.77c15.39-13.329 38.631-11.833 52.186 3.36 79.804 90.158 161.33 203.661 161.33 362.244 0 158.555-81.609 272.086-161.303 362.161a37.196 37.196 0 01-27.841 12.492zM684.24 749.852c-7.467 0-15.045-2.22-21.568-6.884a36.502 36.502 0 01-8.495-51.214l14.685-19.875c38.306-51.436 71.366-95.904 71.366-172.24 0-79.11-29.313-117.472-66.453-166.049-6.579-8.577-13.102-17.21-19.597-26.093a36.474 36.474 0 018.494-51.214c16.617-11.853 39.683-8.1 51.685 8.411 6.052 8.41 12.297 16.6 18.46 24.65 40.027 52.435 81.387 106.646 81.387 210.323 0 100.43-45.524 161.692-85.773 215.793l-14.101 19.153c-7.218 9.993-18.57 15.239-30.09 15.239zM111.033 317.657c-20.314-.047-36.85 16.327-37.002 36.64v290.685c0 20.235 16.627 36.668 37.002 36.668h111.033c9.798 0 19.236 3.858 26.148 10.743l222.12 184.73c3.943 3.886 7.496 7.106 10.799 9.827V112.385a174.46 174.46 0 00-10.854 9.882L248.214 306.859c-6.94 6.94-16.35 10.77-26.148 10.77H111.033v.028zm386.783 654.122c-24.233 0-48.744-16.683-79.75-42.776L206.743 754.987h-95.71C49.826 754.96 0 705.633 0 644.954V354.298c0-60.652 49.826-110.006 111.033-110.006h95.71L417.955 70.415C449.072 43.933 473.166 28 497.621 28c26.537 0 57.543 17.932 57.543 68.34v806.654c0 50.77-30.895 68.785-57.348 68.785z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M500 0c275.714 0 500 224.286 500 500s-224.32 500-500 500C224.286 1000 0 775.714 0 500S224.32 0 500 0zm31.251 189.453h-61.524l.977 342.774 215.82 184.57 38.085-53.71-193.358-162.11V189.453z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M500.001 1000C223.855 1000 0 776.145 0 500 0 223.854 223.855 0 500.001 0 776.145 0 1000 223.854 1000 500c0 276.145-223.856 500-499.999 500zm0-936.524C258.921 63.476 63.476 258.922 63.476 500c0 241.077 195.445 436.524 436.524 436.524 241.078 0 436.526-195.447 436.526-436.524 0-241.078-195.447-436.524-436.525-436.524zm-29.297 468.75l-.572-200.73-.405-142.043h61.524v311.524l85.85 71.976 107.508 90.134-38.086 53.71-215.82-184.57z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M470.704 532.227l-.977-342.774h61.524v311.524l193.358 162.11-38.086 53.71z"
        fill-rule="nonzero"
      />
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <g
        fill-rule="evenodd"
      >
        <g>
          <path
            d="M499.938 937.383c241.594 0 437.445-195.851 437.445-437.445 0-241.595-195.851-437.446-437.445-437.446-241.595 0-437.446 195.851-437.446 437.446 0 241.594 195.851 437.445 437.446 437.445zm0 62.492C223.83 999.875 0 776.045 0 499.938 0 223.83 223.83 0 499.938 0c276.107 0 499.937 223.83 499.937 499.938 0 276.107-223.83 499.937-499.937 499.937z"
            fill-rule="nonzero"
          />
          <path
            d="M459.326 227.299c-.144-6.462 4.47-11.701 11.242-11.701h64.988c6.353 0 11.394 4.913 11.242 11.7l-9.254 414.045c-.144 6.462-5.632 11.7-11.563 11.7h-45.838c-6.241 0-11.411-4.912-11.563-11.7l-9.254-414.044zm43.736 556.978c-24.16 0-43.744-19.585-43.744-43.745 0-24.159 19.585-43.744 43.744-43.744 24.16 0 43.745 19.585 43.745 43.744 0 24.16-19.585 43.745-43.745 43.745z"
          />
        </g>
      </g>
    </svg>
  </i>,
  <i
    class="za-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M444.455 125.97c-.183-8.206 5.676-14.859 14.278-14.859h82.534c8.069 0 14.47 6.24 14.278 14.86l-11.753 525.836c-.183 8.207-7.153 14.86-14.685 14.86h-58.214c-7.927 0-14.492-6.24-14.685-14.86L444.455 125.97zM500 833.334c-30.682 0-55.556-24.873-55.556-55.555 0-30.683 24.874-55.556 55.556-55.556s55.556 24.873 55.556 55.556c0 30.682-24.874 55.555-55.556 55.555z"
        fill-rule="evenodd"
      />
    </svg>
  </i>,
]
`;
